k8s/home-sensor-listener.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: home-sensor-listener
  namespace: home-security
  labels:
    app: home-sensor-listener
    project: individual_two
spec:
  replicas: 1
  selector:
    matchLabels:
      app: home-sensor-listener
  template:
    metadata:
      labels:
        app: home-sensor-listener
        project: individual_two
    spec:
      serviceAccountName: home-sensor-service-account
      containers:
        - name: home-sensor-listener
          image: 125969980889.dkr.ecr.us-east-1.amazonaws.com/home-sensor-listener:latest
          ports:
            - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: home-sensor-listener
  namespace: home-security
spec:
  type: LoadBalancer
  selector:
    app: home-sensor-listener
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
