k8s/home-sensor-processor.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: home-sensor-processor
  namespace: home-security
  labels:
    app: home-sensor-processor
spec:
  replicas: 1
  selector:
    matchLabels:
      app: home-sensor-processor
  template:
    metadata:
      labels:
        app: home-sensor-processor
      annotations:
          appmesh.k8s.aws/sidecarInjectorWebhook: disabled
    spec:
      serviceAccountName: home-sensor-service-account
      containers:
        - name: home-sensor-processor
          image: 125969980889.dkr.ecr.us-east-1.amazonaws.com/home-sensor-processor:latest
---
apiVersion: v1
kind: Service
metadata:
  name: home-sensor-processor
  namespace: home-security
spec:
  type: ClusterIP
  selector:
    app: home-sensor-processor
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
